@@ -1,11 +1,0 @@
-return ['document_icon.gif',
-        'attachedfile_icon.gif',
-        'book_icon.gif',
-        'event_icon.gif',
-        'flexible_icon.gif',
-        'glossary_icon.gif',
-        'image_icon.gif',
-        'imgallery_icon.gif',
-        'news_icon.gif',
-       ]
-        
